# puzzleprogramming

./: .gitignore  CMakeLists.txt  README.md  build_ios.sh  vcpkg.json
.github/workflows/: build_app.yml  build_lib.yml  continuous-integration.yml  puzzlelib.yml  puzzlemath.yml  puzzleplugin.yml
lib/src/: math_equations.cpp
lib/src/aruco/src/: dictionary.cpp
puzzle_plugin/: README.md  pubspec.yaml
puzzle_plugin/example/: pubspec.yaml
puzzle_plugin/example/ios/: Podfile
puzzle_plugin/example/ios/Runner/: Info.plist
puzzle_plugin/example/ios/Runner.xcodeproj/: project.pbxproj
puzzle_plugin/example/lib/: main.dart
puzzle_plugin/example/test/: widget_test.dart
puzzle_plugin/ios/: puzzle_plugin.podspec
puzzle_plugin/ios/Classes/: PuzzlePlugin.h  PuzzlePlugin.m  SwiftPuzzlePlugin.swift  bindings.cpp  bindings.h
puzzle_plugin/lib/: puzzle_plugin.dart
puzzle_plugin/test/: puzzle_plugin_test.dart
puzzlelib/: CMakeLists.txt  puzzlelib.podspec  vcpkg.json
puzzlelib/include/puzzlelib/: puzzlelib.h  types.h
puzzlelib/src/: CMakeLists.txt  main.cpp  math_equations.cpp  math_equations.h  puzzlelib.cpp  static_lib.cpp  static_lib.h
puzzlelib/src/aruco/include/opencv-contrib/aruco/: charuco.hpp
puzzlelib/test/: CMakeLists.txt  aruco.test.cpp  math_equations.test.cpp  puzzelib.test.cpp  puzzlelib.test.cpp
puzzlemath/: README.md  pubspec.yaml
puzzlemath/android/: local.properties
puzzlemath/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
puzzlemath/ios/: Podfile
puzzlemath/ios/Runner/: Info.plist
puzzlemath/ios/Runner.xcodeproj/: project.pbxproj
puzzlemath/lib/: main.dart
puzzlemath/lib/blocs/: blocs.dart
puzzlemath/lib/blocs/camera/: camera.dart  camera_bloc.dart  camera_events.dart  camera_states.dart
puzzlemath/lib/blocs/challenge/: challenge.dart  challenge_bloc.dart  challenge_events.dart  challenge_states.dart
puzzlemath/lib/blocs/challenges/: challenges.dart  challenges_bloc.dart  challenges_events.dart  challenges_states.dart
puzzlemath/lib/config/: database.dart  navigation.dart
puzzlemath/lib/math/: challenge.dart  challenge_repository.dart  math.dart
puzzlemath/lib/models/: models.dart
puzzlemath/lib/models/challenge/: challenge.dart  challenge_repository.dart
puzzlemath/lib/screens/: camera_screen.dart  challenge_list_screen.dart  challenge_screen.dart  home_screen.dart  solution_screen.dart
puzzlemath/lib/theme/: colors.dart  theme.dart  typography.dart
puzzlemath/lib/utilities/: serialization.dart
puzzlemath/lib/widgets/: app_bar.dart  app_logo.dart  button.dart  camera_stream_preview.dart  challenge_list_item.dart  detection_preview.dart  equation.dart  functional_camera_preview.dart  generic_button.dart  progress_bar.dart  puzzle_piece.dart  text_marker.dart
puzzlemath/lib/widgets/animations/: animations.dart
puzzlemath/lib/widgets/animations/wiggle/: animation_controller_state.dart  sine_curve.dart  wiggle_animation.dart
puzzlemath/test/: math_test.dart  widget_test.dart
puzzlemath/test/utilities/: serialization_test.dart
puzzlemath_plugin/: README.md  pubspec.yaml  rebuild.sh
puzzlemath_plugin/android/: build.gradle  settings.gradle
puzzlemath_plugin/android/src/main/: AndroidManifest.xml
puzzlemath_plugin/android/src/main/kotlin/dev/johannesstricker/puzzlemath_plugin/: PuzzlemathPlugin.kt
puzzlemath_plugin/example/: README.md  pubspec.yaml
puzzlemath_plugin/example/android/app/: build.gradle
puzzlemath_plugin/example/android/app/src/debug/: AndroidManifest.xml
puzzlemath_plugin/example/android/app/src/main/: AndroidManifest.xml
puzzlemath_plugin/example/android/app/src/main/kotlin/dev/johannesstricker/puzzlemath_plugin_example/: MainActivity.kt
puzzlemath_plugin/example/ios/Runner/: Info.plist
puzzlemath_plugin/example/lib/: main.dart
puzzlemath_plugin/example/test/: widget_test.dart
puzzlemath_plugin/ios/: puzzlemath_plugin.podspec
puzzlemath_plugin/ios/Classes/: PuzzlemathPlugin.h  PuzzlemathPlugin.m  SwiftPuzzlemathPlugin.swift  bindings.cpp
puzzlemath_plugin/lib/: puzzlemath_plugin.dart
puzzlemath_plugin/test/: puzzlemath_plugin_test.dart
puzzleplugin/: README.md  pubspec.yaml
puzzleplugin/android/: build.gradle  settings.gradle
puzzleplugin/android/src/main/: AndroidManifest.xml
puzzleplugin/android/src/main/kotlin/dev/johannesstricker/puzzle_plugin/: PuzzlePlugin.kt
puzzleplugin/example/: README.md  pubspec.yaml
puzzleplugin/example/android/app/: build.gradle
puzzleplugin/example/android/app/src/debug/: AndroidManifest.xml
puzzleplugin/example/android/app/src/main/: AndroidManifest.xml
puzzleplugin/example/android/app/src/main/kotlin/dev/johannesstricker/puzzlemath_plugin_example/: MainActivity.kt
puzzleplugin/example/integration_test/: main_test.dart
puzzleplugin/example/ios/: Podfile
puzzleplugin/example/ios/Runner.xcodeproj/: project.pbxproj
puzzleplugin/example/lib/: main.dart
puzzleplugin/example/test/: widget_test.dart
puzzleplugin/ios/: puzzle_plugin.podspec
puzzleplugin/ios/Classes/: SwiftPuzzlePlugin.swift  bindings.cpp  bindings.h
puzzleplugin/lib/: puzzle_plugin.dart
puzzleplugin/test/: puzzle_plugin_test.dart
src/: CMakeLists.txt  Interpreter.cpp  Interpreter.h  main.cpp  math_equations.cpp  math_equations.h  static_lib.cpp
src/aruco/: CMakeLists.txt  README.md
src/aruco/include/opencv-contrib/: aruco.hpp
src/aruco/src/: apriltag_quad_thresh.hpp  aruco.cpp  charuco.cpp
test/: CMakeLists.txt  main.test.cpp  math_equations.test.cpp
