PROJECT(cpp_project_template)
CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

IF(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
  MESSAGE(FATAL_ERROR "CMAKE_TOOLCHAIN_FILE environment variable is undefined. Please set it to '$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake'.")
ENDIF()

IF(NOT EXISTS "${CMAKE_TOOLCHAIN_FILE}")
  MESSAGE(FATAL_ERROR "CMAKE_TOOLCHAIN_FILE not found. '${CMAKE_TOOLCHAIN_FILE}' does not exist.")
ENDIF()

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

ADD_SUBDIRECTORY(src)

INCLUDE(CTest)
ENABLE_TESTING()
ADD_SUBDIRECTORY(test)