CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(puzzleprogramming)

IF(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
  MESSAGE(FATAL_ERROR "CMAKE_TOOLCHAIN_FILE environment variable is undefined. Please set it to '$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake'.")
ENDIF()

IF(NOT EXISTS "${CMAKE_TOOLCHAIN_FILE}")
  MESSAGE(FATAL_ERROR "CMAKE_TOOLCHAIN_FILE not found. '${CMAKE_TOOLCHAIN_FILE}' does not exist.")
ENDIF()

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

FIND_PACKAGE(OpenCV REQUIRED)

# Assume built-in pthreads on MacOS. Required to build for iOS.
# IF(APPLE)
#     SET(CMAKE_THREAD_LIBS_INIT "-lpthread")
#     SET(CMAKE_HAVE_THREADS_LIBRARY 1)
#     SET(CMAKE_USE_WIN32_THREADS_INIT 0)
#     SET(CMAKE_USE_PTHREADS_INIT 1)
#     SET(THREADS_PREFER_PTHREAD_FLAG ON)
# ENDIF()

ADD_SUBDIRECTORY(src)

INCLUDE(CTest)
ENABLE_TESTING()
ADD_SUBDIRECTORY(test)