FIND_PACKAGE(Catch2 REQUIRED)

ADD_EXECUTABLE(Tests)
TARGET_SOURCES(Tests
  PRIVATE
    aruco.test.cpp
    ${CMAKE_SOURCE_DIR}/src/puzzlelib.cpp
)
TARGET_LINK_LIBRARIES(Tests
  PRIVATE
    Catch2::Catch2
    opencv_aruco

)
TARGET_INCLUDE_DIRECTORIES(Tests
  PRIVATE
    ${CMAKE_SOURCE_DIR}/src
)

ADD_CUSTOM_COMMAND(TARGET Tests POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/test/data $<TARGET_FILE_DIR:Tests>/data
)

SET_TARGET_PROPERTIES(Tests PROPERTIES XCODE_ATTRIBUTE_ENABLE_BITCODE "NO")

INCLUDE(Catch)
CATCH_DISCOVER_TESTS(Tests)
